// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select should not render with invalid styles when also passed the disabled prop 1`] = `
.circuit-0 {
  font-size: 14px;
  line-height: 18px;
  display: block;
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
  margin-bottom: 16px;
}

.circuit-2 {
  color: #1A1A1A;
  display: block;
  position: relative;
}

label .circuit-2,
label+.circuit-2 {
  margin-top: 4px;
}

.circuit-3 {
  font-size: 16px;
  line-height: 20px;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  cursor: pointer;
  background-color: #FFF;
  outline: none;
  border: 0;
  border-radius: 8px;
  box-shadow: none;
  color: #1A1A1A;
  margin: 0;
  padding-top: 12px;
  padding-right: 48px;
  padding-bottom: 12px;
  padding-left: 16px;
  position: relative;
  width: 100%;
  z-index: 20;
  overflow-x: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  -webkit-transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  box-shadow: 0 0 0 1px #999;
}

.circuit-3:-moz-focusring {
  color: transparent;
  text-shadow: 0 0 0 #000;
}

.circuit-3::-ms-expand {
  display: none;
}

.circuit-4 {
  color: #666;
  display: block;
  z-index: 21;
  pointer-events: none;
  position: absolute;
  height: 48px;
  width: 48px;
  top: 0;
  right: 0;
  padding: 16px;
}

select:active~.circuit-4 {
  display: none;
}

.circuit-5 {
  color: #666;
  display: block;
  z-index: 21;
  pointer-events: none;
  position: absolute;
  height: 48px;
  width: 48px;
  top: 0;
  right: 0;
  padding: 16px;
}

select:not(:active)~.circuit-5 {
  display: none;
}

<label
  class="circuit-0"
  disabled=""
  for="select_5"
>
  <span
    class="circuit-1"
  >
    Label
  </span>
  <div
    class="circuit-2"
  >
    <select
      aria-invalid="true"
      class="circuit-3"
      disabled=""
      id="select_5"
    >
      <option
        value=""
      >
        Select an option
      </option>
      <option
        value="1"
      >
        Option 1
      </option>
      <option
        value="2"
      >
        Option 2
      </option>
      <option
        value="3"
      >
        Option 3
      </option>
    </select>
    <svg
      class="circuit-4"
      fill="none"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M8 11c-.266 0-.52-.104-.71-.29l-4-4A1.013 1.013 0 0 1 3 6a1 1 0 0 1 1-1c.266 0 .52.104.71.29L8 8.58l3.29-3.29c.19-.186.445-.29.71-.29a1 1 0 0 1 1 1c0 .266-.104.52-.29.71l-4 4c-.19.186-.444.29-.71.29z"
        fill="currentColor"
      />
    </svg>
    <svg
      class="circuit-5"
      fill="none"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M8 5c.266 0 .52.104.71.29l4 4c.186.19.29.444.29.71a1 1 0 0 1-1 1c-.265 0-.52-.104-.71-.29L8 7.42l-3.29 3.29c-.19.186-.444.29-.71.29a1 1 0 0 1-1-1c0-.266.104-.52.29-.71l4-4C7.48 5.104 7.734 5 8 5z"
        fill="currentColor"
      />
    </svg>
  </div>
</label>
`;

exports[`Select should render with a prefix when passed the prefix prop 1`] = `
.circuit-0 {
  font-size: 14px;
  line-height: 18px;
  display: block;
  margin-bottom: 16px;
}

.circuit-2 {
  color: #1A1A1A;
  display: block;
  position: relative;
}

label .circuit-2,
label+.circuit-2 {
  margin-top: 4px;
}

.circuit-3 {
  display: block;
  position: absolute;
  z-index: 21;
  height: 48px;
  width: 48px;
  padding: 16px;
  pointer-events: none;
}

.circuit-4 {
  font-size: 16px;
  line-height: 20px;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  cursor: pointer;
  background-color: #FFF;
  outline: none;
  border: 0;
  border-radius: 8px;
  box-shadow: none;
  color: #1A1A1A;
  margin: 0;
  padding-top: 12px;
  padding-right: 48px;
  padding-bottom: 12px;
  padding-left: 16px;
  position: relative;
  width: 100%;
  z-index: 20;
  overflow-x: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  -webkit-transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  padding-left: 48px;
  box-shadow: 0 0 0 1px #999;
}

.circuit-4:-moz-focusring {
  color: transparent;
  text-shadow: 0 0 0 #000;
}

.circuit-4::-ms-expand {
  display: none;
}

.circuit-4:hover {
  box-shadow: 0 0 0 1px #666;
}

.circuit-4:focus {
  box-shadow: 0 0 0 2px #3063E9;
}

.circuit-4:active {
  box-shadow: 0 0 0 1px #3063E9;
}

.circuit-5 {
  color: #666;
  display: block;
  z-index: 21;
  pointer-events: none;
  position: absolute;
  height: 48px;
  width: 48px;
  top: 0;
  right: 0;
  padding: 16px;
}

select:active~.circuit-5 {
  display: none;
}

.circuit-6 {
  color: #666;
  display: block;
  z-index: 21;
  pointer-events: none;
  position: absolute;
  height: 48px;
  width: 48px;
  top: 0;
  right: 0;
  padding: 16px;
}

select:not(:active)~.circuit-6 {
  display: none;
}

<label
  class="circuit-0"
  for="select_9"
>
  <span
    class="circuit-1"
  >
    Label
  </span>
  <div
    class="circuit-2"
  >
    <div
      class="circuit-3"
      style="width: 24px; height: 24px;"
    />
    <select
      class="circuit-4"
      id="select_9"
    >
      <option
        value=""
      >
        Select an option
      </option>
      <option
        value="1"
      >
        Option 1
      </option>
      <option
        value="2"
      >
        Option 2
      </option>
      <option
        value="3"
      >
        Option 3
      </option>
    </select>
    <svg
      class="circuit-5"
      fill="none"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M8 11c-.266 0-.52-.104-.71-.29l-4-4A1.013 1.013 0 0 1 3 6a1 1 0 0 1 1-1c.266 0 .52.104.71.29L8 8.58l3.29-3.29c.19-.186.445-.29.71-.29a1 1 0 0 1 1 1c0 .266-.104.52-.29.71l-4 4c-.19.186-.444.29-.71.29z"
        fill="currentColor"
      />
    </svg>
    <svg
      class="circuit-6"
      fill="none"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M8 5c.266 0 .52.104.71.29l4 4c.186.19.29.444.29.71a1 1 0 0 1-1 1c-.265 0-.52-.104-.71-.29L8 7.42l-3.29 3.29c-.19.186-.444.29-.71.29a1 1 0 0 1-1-1c0-.266.104-.52.29-.71l4-4C7.48 5.104 7.734 5 8 5z"
        fill="currentColor"
      />
    </svg>
  </div>
</label>
`;

exports[`Select should render with a tooltip when passed a validation hint 1`] = `
.circuit-0 {
  font-size: 14px;
  line-height: 18px;
  display: block;
  margin-bottom: 16px;
}

.circuit-2 {
  color: #1A1A1A;
  display: block;
  position: relative;
}

label .circuit-2,
label+.circuit-2 {
  margin-top: 4px;
}

.circuit-3 {
  font-size: 16px;
  line-height: 20px;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  cursor: pointer;
  background-color: #FFF;
  outline: none;
  border: 0;
  border-radius: 8px;
  box-shadow: none;
  color: #1A1A1A;
  margin: 0;
  padding-top: 12px;
  padding-right: 48px;
  padding-bottom: 12px;
  padding-left: 16px;
  position: relative;
  width: 100%;
  z-index: 20;
  overflow-x: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  -webkit-transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  box-shadow: 0 0 0 1px #999;
}

.circuit-3:-moz-focusring {
  color: transparent;
  text-shadow: 0 0 0 #000;
}

.circuit-3::-ms-expand {
  display: none;
}

.circuit-3:hover {
  box-shadow: 0 0 0 1px #666;
}

.circuit-3:focus {
  box-shadow: 0 0 0 2px #3063E9;
}

.circuit-3:active {
  box-shadow: 0 0 0 1px #3063E9;
}

.circuit-4 {
  color: #666;
  display: block;
  z-index: 21;
  pointer-events: none;
  position: absolute;
  height: 48px;
  width: 48px;
  top: 0;
  right: 0;
  padding: 16px;
}

select:active~.circuit-4 {
  display: none;
}

.circuit-5 {
  color: #666;
  display: block;
  z-index: 21;
  pointer-events: none;
  position: absolute;
  height: 48px;
  width: 48px;
  top: 0;
  right: 0;
  padding: 16px;
}

select:not(:active)~.circuit-5 {
  display: none;
}

.circuit-6 {
  font-size: 14px;
  line-height: 18px;
  display: block;
  margin-top: 4px;
  color: #666;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

<label
  class="circuit-0"
  for="select_8"
>
  <span
    class="circuit-1"
  >
    Label
  </span>
  <div
    class="circuit-2"
  >
    <select
      class="circuit-3"
      id="select_8"
    >
      <option
        value=""
      >
        Select an option
      </option>
      <option
        value="1"
      >
        Option 1
      </option>
      <option
        value="2"
      >
        Option 2
      </option>
      <option
        value="3"
      >
        Option 3
      </option>
    </select>
    <svg
      class="circuit-4"
      fill="none"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M8 11c-.266 0-.52-.104-.71-.29l-4-4A1.013 1.013 0 0 1 3 6a1 1 0 0 1 1-1c.266 0 .52.104.71.29L8 8.58l3.29-3.29c.19-.186.445-.29.71-.29a1 1 0 0 1 1 1c0 .266-.104.52-.29.71l-4 4c-.19.186-.444.29-.71.29z"
        fill="currentColor"
      />
    </svg>
    <svg
      class="circuit-5"
      fill="none"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M8 5c.266 0 .52.104.71.29l4 4c.186.19.29.444.29.71a1 1 0 0 1-1 1c-.265 0-.52-.104-.71-.29L8 7.42l-3.29 3.29c-.19.186-.444.29-.71.29a1 1 0 0 1-1-1c0-.266.104-.52.29-.71l4-4C7.48 5.104 7.734 5 8 5z"
        fill="currentColor"
      />
    </svg>
  </div>
  <span
    class="circuit-6"
  >
    This field is required.
  </span>
</label>
`;

exports[`Select should render with a visually-hidden label 1`] = `
.circuit-0 {
  font-size: 14px;
  line-height: 18px;
  display: block;
  margin-bottom: 16px;
}

.circuit-1 {
  border: 0;
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.circuit-2 {
  color: #1A1A1A;
  display: block;
  position: relative;
}

.circuit-3 {
  font-size: 16px;
  line-height: 20px;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  cursor: pointer;
  background-color: #FFF;
  outline: none;
  border: 0;
  border-radius: 8px;
  box-shadow: none;
  color: #1A1A1A;
  margin: 0;
  padding-top: 12px;
  padding-right: 48px;
  padding-bottom: 12px;
  padding-left: 16px;
  position: relative;
  width: 100%;
  z-index: 20;
  overflow-x: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  -webkit-transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  box-shadow: 0 0 0 1px #999;
}

.circuit-3:-moz-focusring {
  color: transparent;
  text-shadow: 0 0 0 #000;
}

.circuit-3::-ms-expand {
  display: none;
}

.circuit-3:hover {
  box-shadow: 0 0 0 1px #666;
}

.circuit-3:focus {
  box-shadow: 0 0 0 2px #3063E9;
}

.circuit-3:active {
  box-shadow: 0 0 0 1px #3063E9;
}

.circuit-4 {
  color: #666;
  display: block;
  z-index: 21;
  pointer-events: none;
  position: absolute;
  height: 48px;
  width: 48px;
  top: 0;
  right: 0;
  padding: 16px;
}

select:active~.circuit-4 {
  display: none;
}

.circuit-5 {
  color: #666;
  display: block;
  z-index: 21;
  pointer-events: none;
  position: absolute;
  height: 48px;
  width: 48px;
  top: 0;
  right: 0;
  padding: 16px;
}

select:not(:active)~.circuit-5 {
  display: none;
}

<label
  class="circuit-0"
  for="select_2"
>
  <span
    class="circuit-1"
  >
    Label
  </span>
  <div
    class="circuit-2"
  >
    <select
      class="circuit-3"
      id="select_2"
    >
      <option
        value=""
      >
        Select an option
      </option>
      <option
        value="1"
      >
        Option 1
      </option>
      <option
        value="2"
      >
        Option 2
      </option>
      <option
        value="3"
      >
        Option 3
      </option>
    </select>
    <svg
      class="circuit-4"
      fill="none"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M8 11c-.266 0-.52-.104-.71-.29l-4-4A1.013 1.013 0 0 1 3 6a1 1 0 0 1 1-1c.266 0 .52.104.71.29L8 8.58l3.29-3.29c.19-.186.445-.29.71-.29a1 1 0 0 1 1 1c0 .266-.104.52-.29.71l-4 4c-.19.186-.444.29-.71.29z"
        fill="currentColor"
      />
    </svg>
    <svg
      class="circuit-5"
      fill="none"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M8 5c.266 0 .52.104.71.29l4 4c.186.19.29.444.29.71a1 1 0 0 1-1 1c-.265 0-.52-.104-.71-.29L8 7.42l-3.29 3.29c-.19.186-.444.29-.71.29a1 1 0 0 1-1-1c0-.266.104-.52.29-.71l4-4C7.48 5.104 7.734 5 8 5z"
        fill="currentColor"
      />
    </svg>
  </div>
</label>
`;

exports[`Select should render with default styles 1`] = `
.circuit-0 {
  font-size: 14px;
  line-height: 18px;
  display: block;
  margin-bottom: 16px;
}

.circuit-2 {
  color: #1A1A1A;
  display: block;
  position: relative;
}

label .circuit-2,
label+.circuit-2 {
  margin-top: 4px;
}

.circuit-3 {
  font-size: 16px;
  line-height: 20px;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  cursor: pointer;
  background-color: #FFF;
  outline: none;
  border: 0;
  border-radius: 8px;
  box-shadow: none;
  color: #1A1A1A;
  margin: 0;
  padding-top: 12px;
  padding-right: 48px;
  padding-bottom: 12px;
  padding-left: 16px;
  position: relative;
  width: 100%;
  z-index: 20;
  overflow-x: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  -webkit-transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  box-shadow: 0 0 0 1px #999;
}

.circuit-3:-moz-focusring {
  color: transparent;
  text-shadow: 0 0 0 #000;
}

.circuit-3::-ms-expand {
  display: none;
}

.circuit-3:hover {
  box-shadow: 0 0 0 1px #666;
}

.circuit-3:focus {
  box-shadow: 0 0 0 2px #3063E9;
}

.circuit-3:active {
  box-shadow: 0 0 0 1px #3063E9;
}

.circuit-4 {
  color: #666;
  display: block;
  z-index: 21;
  pointer-events: none;
  position: absolute;
  height: 48px;
  width: 48px;
  top: 0;
  right: 0;
  padding: 16px;
}

select:active~.circuit-4 {
  display: none;
}

.circuit-5 {
  color: #666;
  display: block;
  z-index: 21;
  pointer-events: none;
  position: absolute;
  height: 48px;
  width: 48px;
  top: 0;
  right: 0;
  padding: 16px;
}

select:not(:active)~.circuit-5 {
  display: none;
}

<label
  class="circuit-0"
  for="select_1"
>
  <span
    class="circuit-1"
  >
    Label
  </span>
  <div
    class="circuit-2"
  >
    <select
      class="circuit-3"
      id="select_1"
    >
      <option
        value=""
      >
        Select an option
      </option>
      <option
        value="1"
      >
        Option 1
      </option>
      <option
        value="2"
      >
        Option 2
      </option>
      <option
        value="3"
      >
        Option 3
      </option>
    </select>
    <svg
      class="circuit-4"
      fill="none"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M8 11c-.266 0-.52-.104-.71-.29l-4-4A1.013 1.013 0 0 1 3 6a1 1 0 0 1 1-1c.266 0 .52.104.71.29L8 8.58l3.29-3.29c.19-.186.445-.29.71-.29a1 1 0 0 1 1 1c0 .266-.104.52-.29.71l-4 4c-.19.186-.444.29-.71.29z"
        fill="currentColor"
      />
    </svg>
    <svg
      class="circuit-5"
      fill="none"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M8 5c.266 0 .52.104.71.29l4 4c.186.19.29.444.29.71a1 1 0 0 1-1 1c-.265 0-.52-.104-.71-.29L8 7.42l-3.29 3.29c-.19.186-.444.29-.71.29a1 1 0 0 1-1-1c0-.266.104-.52.29-.71l4-4C7.48 5.104 7.734 5 8 5z"
        fill="currentColor"
      />
    </svg>
  </div>
</label>
`;

exports[`Select should render with disabled styles when passed the disabled prop 1`] = `
.circuit-0 {
  font-size: 14px;
  line-height: 18px;
  display: block;
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
  margin-bottom: 16px;
}

.circuit-2 {
  color: #1A1A1A;
  display: block;
  position: relative;
}

label .circuit-2,
label+.circuit-2 {
  margin-top: 4px;
}

.circuit-3 {
  font-size: 16px;
  line-height: 20px;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  cursor: pointer;
  background-color: #FFF;
  outline: none;
  border: 0;
  border-radius: 8px;
  box-shadow: none;
  color: #1A1A1A;
  margin: 0;
  padding-top: 12px;
  padding-right: 48px;
  padding-bottom: 12px;
  padding-left: 16px;
  position: relative;
  width: 100%;
  z-index: 20;
  overflow-x: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  -webkit-transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  box-shadow: 0 0 0 1px #999;
}

.circuit-3:-moz-focusring {
  color: transparent;
  text-shadow: 0 0 0 #000;
}

.circuit-3::-ms-expand {
  display: none;
}

.circuit-4 {
  color: #666;
  display: block;
  z-index: 21;
  pointer-events: none;
  position: absolute;
  height: 48px;
  width: 48px;
  top: 0;
  right: 0;
  padding: 16px;
}

select:active~.circuit-4 {
  display: none;
}

.circuit-5 {
  color: #666;
  display: block;
  z-index: 21;
  pointer-events: none;
  position: absolute;
  height: 48px;
  width: 48px;
  top: 0;
  right: 0;
  padding: 16px;
}

select:not(:active)~.circuit-5 {
  display: none;
}

<label
  class="circuit-0"
  disabled=""
  for="select_3"
>
  <span
    class="circuit-1"
  >
    Label
  </span>
  <div
    class="circuit-2"
  >
    <select
      class="circuit-3"
      disabled=""
      id="select_3"
    >
      <option
        value=""
      >
        Select an option
      </option>
      <option
        value="1"
      >
        Option 1
      </option>
      <option
        value="2"
      >
        Option 2
      </option>
      <option
        value="3"
      >
        Option 3
      </option>
    </select>
    <svg
      class="circuit-4"
      fill="none"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M8 11c-.266 0-.52-.104-.71-.29l-4-4A1.013 1.013 0 0 1 3 6a1 1 0 0 1 1-1c.266 0 .52.104.71.29L8 8.58l3.29-3.29c.19-.186.445-.29.71-.29a1 1 0 0 1 1 1c0 .266-.104.52-.29.71l-4 4c-.19.186-.444.29-.71.29z"
        fill="currentColor"
      />
    </svg>
    <svg
      class="circuit-5"
      fill="none"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M8 5c.266 0 .52.104.71.29l4 4c.186.19.29.444.29.71a1 1 0 0 1-1 1c-.265 0-.52-.104-.71-.29L8 7.42l-3.29 3.29c-.19.186-.444.29-.71.29a1 1 0 0 1-1-1c0-.266.104-.52.29-.71l4-4C7.48 5.104 7.734 5 8 5z"
        fill="currentColor"
      />
    </svg>
  </div>
</label>
`;

exports[`Select should render with inline styles when passed the inline prop 1`] = `
.circuit-0 {
  font-size: 14px;
  line-height: 18px;
  display: block;
  display: inline-block;
  margin-right: 16px;
  margin-bottom: 16px;
  display: inline-block;
}

.circuit-2 {
  color: #1A1A1A;
  display: block;
  position: relative;
}

label .circuit-2,
label+.circuit-2 {
  margin-top: 4px;
}

.circuit-3 {
  font-size: 16px;
  line-height: 20px;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  cursor: pointer;
  background-color: #FFF;
  outline: none;
  border: 0;
  border-radius: 8px;
  box-shadow: none;
  color: #1A1A1A;
  margin: 0;
  padding-top: 12px;
  padding-right: 48px;
  padding-bottom: 12px;
  padding-left: 16px;
  position: relative;
  width: 100%;
  z-index: 20;
  overflow-x: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  -webkit-transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  box-shadow: 0 0 0 1px #999;
}

.circuit-3:-moz-focusring {
  color: transparent;
  text-shadow: 0 0 0 #000;
}

.circuit-3::-ms-expand {
  display: none;
}

.circuit-3:hover {
  box-shadow: 0 0 0 1px #666;
}

.circuit-3:focus {
  box-shadow: 0 0 0 2px #3063E9;
}

.circuit-3:active {
  box-shadow: 0 0 0 1px #3063E9;
}

.circuit-4 {
  color: #666;
  display: block;
  z-index: 21;
  pointer-events: none;
  position: absolute;
  height: 48px;
  width: 48px;
  top: 0;
  right: 0;
  padding: 16px;
}

select:active~.circuit-4 {
  display: none;
}

.circuit-5 {
  color: #666;
  display: block;
  z-index: 21;
  pointer-events: none;
  position: absolute;
  height: 48px;
  width: 48px;
  top: 0;
  right: 0;
  padding: 16px;
}

select:not(:active)~.circuit-5 {
  display: none;
}

<label
  class="circuit-0"
  for="select_6"
>
  <span
    class="circuit-1"
  >
    Label
  </span>
  <div
    class="circuit-2"
  >
    <select
      class="circuit-3"
      id="select_6"
    >
      <option
        value=""
      >
        Select an option
      </option>
      <option
        value="1"
      >
        Option 1
      </option>
      <option
        value="2"
      >
        Option 2
      </option>
      <option
        value="3"
      >
        Option 3
      </option>
    </select>
    <svg
      class="circuit-4"
      fill="none"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M8 11c-.266 0-.52-.104-.71-.29l-4-4A1.013 1.013 0 0 1 3 6a1 1 0 0 1 1-1c.266 0 .52.104.71.29L8 8.58l3.29-3.29c.19-.186.445-.29.71-.29a1 1 0 0 1 1 1c0 .266-.104.52-.29.71l-4 4c-.19.186-.444.29-.71.29z"
        fill="currentColor"
      />
    </svg>
    <svg
      class="circuit-5"
      fill="none"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M8 5c.266 0 .52.104.71.29l4 4c.186.19.29.444.29.71a1 1 0 0 1-1 1c-.265 0-.52-.104-.71-.29L8 7.42l-3.29 3.29c-.19.186-.444.29-.71.29a1 1 0 0 1-1-1c0-.266.104-.52.29-.71l4-4C7.48 5.104 7.734 5 8 5z"
        fill="currentColor"
      />
    </svg>
  </div>
</label>
`;

exports[`Select should render with invalid styles when passed the invalid prop 1`] = `
.circuit-0 {
  font-size: 14px;
  line-height: 18px;
  display: block;
  margin-bottom: 16px;
}

.circuit-2 {
  color: #1A1A1A;
  display: block;
  position: relative;
}

label .circuit-2,
label+.circuit-2 {
  margin-top: 4px;
}

.circuit-3 {
  font-size: 16px;
  line-height: 20px;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  cursor: pointer;
  background-color: #FFF;
  outline: none;
  border: 0;
  border-radius: 8px;
  box-shadow: none;
  color: #1A1A1A;
  margin: 0;
  padding-top: 12px;
  padding-right: 48px;
  padding-bottom: 12px;
  padding-left: 16px;
  position: relative;
  width: 100%;
  z-index: 20;
  overflow-x: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  -webkit-transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  padding-right: 56px;
  box-shadow: 0 0 0 1px #D23F47;
}

.circuit-3:-moz-focusring {
  color: transparent;
  text-shadow: 0 0 0 #000;
}

.circuit-3::-ms-expand {
  display: none;
}

.circuit-3:hover {
  box-shadow: 0 0 0 1px #B22426;
}

.circuit-3:focus {
  box-shadow: 0 0 0 2px #D23F47;
}

.circuit-3:active {
  box-shadow: 0 0 0 1px #D23F47;
}

.circuit-4 {
  color: #666;
  display: block;
  z-index: 21;
  pointer-events: none;
  position: absolute;
  height: 48px;
  width: 48px;
  top: 0;
  right: 0;
  padding: 16px;
}

select:active~.circuit-4 {
  display: none;
}

.circuit-5 {
  color: #666;
  display: block;
  z-index: 21;
  pointer-events: none;
  position: absolute;
  height: 48px;
  width: 48px;
  top: 0;
  right: 0;
  padding: 16px;
}

select:not(:active)~.circuit-5 {
  display: none;
}

<label
  class="circuit-0"
  for="select_4"
>
  <span
    class="circuit-1"
  >
    Label
  </span>
  <div
    class="circuit-2"
  >
    <select
      aria-invalid="true"
      class="circuit-3"
      id="select_4"
    >
      <option
        value=""
      >
        Select an option
      </option>
      <option
        value="1"
      >
        Option 1
      </option>
      <option
        value="2"
      >
        Option 2
      </option>
      <option
        value="3"
      >
        Option 3
      </option>
    </select>
    <svg
      class="circuit-4"
      fill="none"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M8 11c-.266 0-.52-.104-.71-.29l-4-4A1.013 1.013 0 0 1 3 6a1 1 0 0 1 1-1c.266 0 .52.104.71.29L8 8.58l3.29-3.29c.19-.186.445-.29.71-.29a1 1 0 0 1 1 1c0 .266-.104.52-.29.71l-4 4c-.19.186-.444.29-.71.29z"
        fill="currentColor"
      />
    </svg>
    <svg
      class="circuit-5"
      fill="none"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M8 5c.266 0 .52.104.71.29l4 4c.186.19.29.444.29.71a1 1 0 0 1-1 1c-.265 0-.52-.104-.71-.29L8 7.42l-3.29 3.29c-.19.186-.444.29-.71.29a1 1 0 0 1-1-1c0-.266.104-.52.29-.71l4-4C7.48 5.104 7.734 5 8 5z"
        fill="currentColor"
      />
    </svg>
  </div>
</label>
`;

exports[`Select should render with no margin styles when passed the noMargin prop 1`] = `
.circuit-0 {
  font-size: 14px;
  line-height: 18px;
  display: block;
}

.circuit-2 {
  color: #1A1A1A;
  display: block;
  position: relative;
}

label .circuit-2,
label+.circuit-2 {
  margin-top: 4px;
}

.circuit-3 {
  font-size: 16px;
  line-height: 20px;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  cursor: pointer;
  background-color: #FFF;
  outline: none;
  border: 0;
  border-radius: 8px;
  box-shadow: none;
  color: #1A1A1A;
  margin: 0;
  padding-top: 12px;
  padding-right: 48px;
  padding-bottom: 12px;
  padding-left: 16px;
  position: relative;
  width: 100%;
  z-index: 20;
  overflow-x: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  -webkit-transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  box-shadow: 0 0 0 1px #999;
}

.circuit-3:-moz-focusring {
  color: transparent;
  text-shadow: 0 0 0 #000;
}

.circuit-3::-ms-expand {
  display: none;
}

.circuit-3:hover {
  box-shadow: 0 0 0 1px #666;
}

.circuit-3:focus {
  box-shadow: 0 0 0 2px #3063E9;
}

.circuit-3:active {
  box-shadow: 0 0 0 1px #3063E9;
}

.circuit-4 {
  color: #666;
  display: block;
  z-index: 21;
  pointer-events: none;
  position: absolute;
  height: 48px;
  width: 48px;
  top: 0;
  right: 0;
  padding: 16px;
}

select:active~.circuit-4 {
  display: none;
}

.circuit-5 {
  color: #666;
  display: block;
  z-index: 21;
  pointer-events: none;
  position: absolute;
  height: 48px;
  width: 48px;
  top: 0;
  right: 0;
  padding: 16px;
}

select:not(:active)~.circuit-5 {
  display: none;
}

<label
  class="circuit-0"
  for="select_7"
>
  <span
    class="circuit-1"
  />
  <div
    class="circuit-2"
  >
    <select
      class="circuit-3"
      id="select_7"
    >
      <option
        value=""
      >
        Select an option
      </option>
      <option
        value="1"
      >
        Option 1
      </option>
      <option
        value="2"
      >
        Option 2
      </option>
      <option
        value="3"
      >
        Option 3
      </option>
    </select>
    <svg
      class="circuit-4"
      fill="none"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M8 11c-.266 0-.52-.104-.71-.29l-4-4A1.013 1.013 0 0 1 3 6a1 1 0 0 1 1-1c.266 0 .52.104.71.29L8 8.58l3.29-3.29c.19-.186.445-.29.71-.29a1 1 0 0 1 1 1c0 .266-.104.52-.29.71l-4 4c-.19.186-.444.29-.71.29z"
        fill="currentColor"
      />
    </svg>
    <svg
      class="circuit-5"
      fill="none"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M8 5c.266 0 .52.104.71.29l4 4c.186.19.29.444.29.71a1 1 0 0 1-1 1c-.265 0-.52-.104-.71-.29L8 7.42l-3.29 3.29c-.19.186-.444.29-.71.29a1 1 0 0 1-1-1c0-.266.104-.52.29-.71l4-4C7.48 5.104 7.734 5 8 5z"
        fill="currentColor"
      />
    </svg>
  </div>
</label>
`;
